chore: refresh guard messaging and cache busting

--- a/User.html
+++ b/User.html
@@ -2,25 +2,25 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Wellness</title>
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/wellness.css?v=20251105a">
-<script defer src="./assets/js/i18n.js?v=20251105a"></script>
-<script defer src="./assets/js/version.js?v=20251105a"></script>
-<script defer src="./assets/js/app-shell.js?v=20251105a"></script>
-<script defer src="./assets/js/date-controls.js?v=20251105a"></script>
-<script defer src="./assets/js/team-filter.js?v=20251105a"></script>
-<script defer src="./assets/js/guard.js?v=20251105a"></script>
-<script defer src="./assets/js/mock-stream.js?v=20251105a"></script>
-<script defer src="./assets/js/wellbeing.compute.js?v=20251105a"></script>
-<script defer src="./assets/js/wellness-page.js?v=20251105a"></script>
-<script defer src="./assets/js/about.js?v=20251105a"></script>
-<script defer src="./assets/js/exporter.js?v=20251105a"></script>
-<script defer src="./assets/js/data-loader.js?v=20251105a"></script>
-<script defer src="./assets/js/auth.js?v=20251105a"></script>
-<script defer src="./assets/js/guards.js?v=20251105a"></script>
-<script defer src="./assets/js/theme.js?v=20251105a"></script>
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/wellness.css?v=2025-11-12a">
+<script defer src="./assets/js/i18n.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/version.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guard.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/mock-stream.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/wellbeing.compute.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/wellness-page.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/about.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/exporter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/auth.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guards.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/theme.js?v=2025-11-12a"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
