--- a/Corporate.html
+++ b/Corporate.html
@@ -2,23 +2,23 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Corporate</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/corporate.css?v=20251105a">
-<script defer src="./assets/js/i18n.js?v=20251105a"></script>
-<script defer src="./assets/js/version.js?v=20251105a"></script>
-<script defer src="./assets/js/app-shell.js?v=20251105a"></script>
-<script defer src="./assets/js/date-controls.js?v=20251105a"></script>
-<script defer src="./assets/js/team-filter.js?v=20251105a"></script>
-<script defer src="./assets/js/guard.js?v=20251105a"></script>
-<script defer src="./assets/js/corporate.js?v=20251105a"></script>
-<script defer src="./assets/js/about.js?v=20251105a"></script>
-<script defer src="./assets/js/exporter.js?v=20251105a"></script>
-<script defer src="./assets/js/data-loader.js?v=20251105a"></script>
-<script defer src="./assets/js/auth.js?v=20251105a"></script>
-<script defer src="./assets/js/guards.js?v=20251105a"></script>
-<script defer src="./assets/js/theme.js?v=20251105a"></script>
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/corporate.css?v=2025-11-12a">
+<script defer src="./assets/js/i18n.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/version.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guard.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/corporate.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/about.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/exporter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/auth.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guards.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/theme.js?v=2025-11-12a"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -44,8 +44,8 @@
     <p id="corp-caption" class="caption" aria-live="polite"></p>
 
     <div class="scenario-controls" role="group" aria-label="Scenario toggles" data-i18n="aria.scenario" data-i18n-attr="aria-label">
-      <button type="button" class="btn btn--ghost" id="btn-load-night" data-i18n="btn.loadScenario">Load Night-Shift Scenario</button>
-      <button type="button" class="btn btn--ghost" id="btn-return-live" data-i18n="btn.liveView">Return to Live View</button>
+      <button type="button" class="btn btn--ghost" id="btn-load-night" data-i18n="ui.loadScenario">Load Night-Shift Scenario</button>
+      <button type="button" class="btn btn--ghost" id="btn-return-live" data-i18n="ui.returnLive">Return to Live View</button>
     </div>
 
     <section id="corp-kpis" class="panel">
@@ -89,7 +89,7 @@
     <section id="corp-activity" class="panel">
       <div class="panel__head">
         <span data-i18n="section.corporateActivity">Activity Log</span>
-        <button id="export-activity" class="btn" data-i18n="label.export.csv">Export CSV</button>
+        <button id="export-activity" class="btn" data-i18n="ui.exportCSV">Export CSV</button>
       </div>
       <table id="activity-table" class="table"></table>
     </section>
