--- a/Devices.html
+++ b/Devices.html
@@ -2,24 +2,24 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Devices</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-11-12a">
 <!-- optional page CSS -->
-<link rel="stylesheet" href="./assets/css/devices.css?v=20251105a">
-<script defer src="./assets/js/i18n.js?v=20251105a"></script>
-<script defer src="./assets/js/version.js?v=20251105a"></script>
-<script defer src="./assets/js/app-shell.js?v=20251105a"></script>
-<script defer src="./assets/js/date-controls.js?v=20251105a"></script>
-<script defer src="./assets/js/team-filter.js?v=20251105a"></script>
-<script defer src="./assets/js/guard.js?v=20251105a"></script>
-<script defer src="./assets/js/devices.js?v=20251105a"></script>
-<script defer src="./assets/js/about.js?v=20251105a"></script>
-<script defer src="./assets/js/exporter.js?v=20251105a"></script>
-<script defer src="./assets/js/data-loader.js?v=20251105a"></script>
-<script defer src="./assets/js/auth.js?v=20251105a"></script>
-<script defer src="./assets/js/guards.js?v=20251105a"></script>
-<script defer src="./assets/js/theme.js?v=20251105a"></script>
+<link rel="stylesheet" href="./assets/css/devices.css?v=2025-11-12a">
+<script defer src="./assets/js/i18n.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/version.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guard.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/devices.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/about.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/exporter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/auth.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guards.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/theme.js?v=2025-11-12a"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -27,7 +27,7 @@
     <div class="header header--devices">
       <div class="header__title" data-i18n="header.devices">Devices</div>
       <div class="header__actions">
-        <button class="btn btn--ghost" type="button" id="export-fleet" data-i18n="label.export.csv">Export CSV</button>
+        <button class="btn btn--ghost" type="button" id="export-fleet" data-i18n="ui.exportCSV">Export CSV</button>
         <div id="team-filter" class="team-filter"></div>
         <div id="date-controls"></div>
         <button class="header__icon" type="button" data-about-trigger data-i18n="aria.about" data-i18n-attr="aria-label" aria-label="About"></button>
