--- a/Summary.html
+++ b/Summary.html
@@ -2,25 +2,25 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>SPA2099 HR Health — Summary</title>
-<link rel="stylesheet" href="./assets/css/app-shell.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=20251105a">
-<link rel="stylesheet" href="./assets/css/ui.components.css?v=20251105a">
+<link rel="stylesheet" href="./assets/css/app-shell.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.tokens.css?v=2025-11-12a">
+<link rel="stylesheet" href="./assets/css/ui.components.css?v=2025-11-12a">
 <!-- optional page CSS -->
-<link rel="stylesheet" href="./assets/css/hr-board.neon.css?v=20251105a">
-<script defer src="./assets/js/i18n.js?v=20251105a"></script>
-<script defer src="./assets/js/version.js?v=20251105a"></script>
-<script defer src="./assets/js/app-shell.js?v=20251105a"></script>
-<script defer src="./assets/js/date-controls.js?v=20251105a"></script>
-<script defer src="./assets/js/team-filter.js?v=20251105a"></script>
-<script defer src="./assets/js/guard.js?v=20251105a"></script>
-<script defer src="./assets/js/summary.js?v=20251105a"></script>
-<script defer src="./assets/js/about.js?v=20251105a"></script>
-<script defer src="./assets/js/exporter.js?v=20251105a"></script>
-<script defer src="./assets/js/data-loader.js?v=20251105a"></script>
-<script defer src="./assets/js/auth.js?v=20251105a"></script>
-<script defer src="./assets/js/guards.js?v=20251105a"></script>
-<script defer src="./assets/js/theme.js?v=20251105a"></script>
-<script defer src="./assets/js/hr-board.neon.js?v=20251105a"></script>
+<link rel="stylesheet" href="./assets/css/hr-board.neon.css?v=2025-11-12a">
+<script defer src="./assets/js/i18n.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/version.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/app-shell.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/date-controls.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/team-filter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guard.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/summary.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/about.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/exporter.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/data-loader.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/auth.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/guards.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/theme.js?v=2025-11-12a"></script>
+<script defer src="./assets/js/hr-board.neon.js?v=2025-11-12a"></script>
 </head><body>
 <div class="page">
   <div id="sidebar-slot"></div>
@@ -42,8 +42,8 @@
     <p id="global-caption" class="header__caption" aria-live="polite"></p>
     <p id="sum-caption" class="caption" aria-live="polite"></p>
     <div class="scenario-controls" role="group" data-i18n="aria.scenario" data-i18n-attr="aria-label" aria-label="Scenario toggles">
-      <button type="button" id="btn-night-scenario" class="btn btn--ghost" data-i18n="btn.loadScenario">Load Night-Shift Scenario</button>
-      <button type="button" id="btn-night-reset" class="btn btn--ghost" data-i18n="btn.liveView">Return to Live View</button>
+      <button type="button" id="btn-night-scenario" class="btn btn--ghost" data-i18n="ui.loadScenario">Load Night-Shift Scenario</button>
+      <button type="button" id="btn-night-reset" class="btn btn--ghost" data-i18n="ui.returnLive">Return to Live View</button>
     </div>
     <div id="sum-kpi-grid" class="grid grid-4"></div>
     <div id="sum-toast" class="toast" aria-live="polite" role="status" hidden></div>
