feat(demo): introduce demo landing experience

--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!doctype html><meta charset="utf-8">
-<meta http-equiv="refresh" content="0; url=Summary.html">
+<meta http-equiv="refresh" content="0; url=Demo.html">
